Attempt at fixing spacing for assistance page
This is another attempt at fixing this spacing. It doesn’t look great. Need to run it by the designers.

--- a/src/assets/scss/layouts/pages.scss
+++ b/src/assets/scss/layouts/pages.scss
@@ -62,6 +62,8 @@
 }
 
 .pages--assistance {
+  flex-wrap: wrap;
+
   p {
     margin-bottom: 1rem;
   }
@@ -71,10 +73,8 @@
   }
 
   .pages__column {
-    flex: 1 1 auto;
-
     @media (min-width: $screen-sm) {
-      max-width: 13.75rem;
+      width: 13.75rem;
       margin-left: 1.5rem;
       margin-right: 1.5rem;
       padding: 0;
